--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,9 +18,6 @@ services:
   api:
     image: sarathchandran2000/connectloom
     container_name: server
-    volumes:
-      - node_modules:/app/node_modules
-      - ./server:/app
     ports:
       - "5000:5000"
     depends_on:
@@ -34,8 +31,6 @@ services:
     image: sarathchandran2000/connectloom-frontend
     container_name: frontend
     stdin_open: true
-    # environment:
-    #   - CHOKIDAR_USEPOLLING=true
     ports:
       - "3000:3000"
     depends_on:
@@ -43,22 +38,19 @@ services:
     networks:
       - app-network
 
+  # NGINX service
+  nginx:
+    image: sarathchandran2000/connectloom-nginx
+    container_name: nginx
+    ports:
+      - "80:80"
+    depends_on:
+      - frontend
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
 
-volumes:
-  node_modules:
-  # Nginx service
-  # nginx:
-  #   depends_on:
-  #     - api
-  #     - frontend
-  #   restart: always
-  #   build:
-  #     dockerfile: dockerfile
-  #     context: ./nginx
-  #   ports:
-
-
-  
+    
