--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,6 +46,8 @@ services:
       - "80:80"
     depends_on:
       - frontend
+    volumes: 
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - app-network
 
