--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
   api:
     image: sarathchandran2000/connectloom
     container_name: server
+    restart: always
     ports:
       - "5000:5000"
     depends_on:
@@ -30,6 +31,7 @@ services:
   frontend:
     image: sarathchandran2000/connectloom-frontend
     container_name: frontend
+    restart: always
     stdin_open: true
     ports:
       - "3000:3000"
